# template_gui_package

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/template_gui_package/: hello_gui.h  hello_gui.ui
launch/: demo.launch
nodes/: hello_gui_node.cpp  talker.cpp
rc/: example_resouce.qrc
src/: hello_gui.cpp
